# smart-fridge

./: 1_Date.cpp  1_Date.h  1_Date_Tests.cpp  2_Product.cpp  2_Product.h  2_Product_Tests.cpp  3_ProductDatabase.cpp  3_ProductDatabase.h  3_ProductDatabase_Tests.cpp  4_ShoppingList.cpp  4_ShoppingList.h  4_ShoppingList_Tests.cpp  5_Item.cpp  5_Item.h  5_Item_Tests.cpp  6_Fridge.cpp  6_Fridge.h  6_Fridge_Tests.cpp  CMakeLists.txt  README.md  correct_import.txt  default_essentials.txt  default_products.txt  details.txt  incorrect_import.txt
